labwordpress/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labwordpress
  labels:
    name: labwordpress
