labwordpress/4-ingress-wordpress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: labwordpress
  name: ingress-wordpress
spec:
  rules:
  - host: labwordpress.compass.com
    http:
      paths:
      - backend:
          name: wordpress
          port:
            number: 80
